Fixed setup screen spacing.

--- a/styles/container-settings.less
+++ b/styles/container-settings.less
@@ -24,7 +24,7 @@
         &.active {
           li {
             font-weight: 500;
-            border-bottom: 2px solid @brand-primary;
+            border-bottom: 3px solid @brand-primary;
             color: @gray-darkest;
           }
         }
