--- a/styles/right-panel.less
+++ b/styles/right-panel.less
@@ -116,7 +116,7 @@
         &.active {
           background-color: @color-background;
           border-bottom: 1px solid @color-background;
-          border-top: 2px solid @brand-primary;
+          border-top: 3px solid @brand-primary;
           color: @gray-darker;
         }
         &:active {
@@ -151,8 +151,9 @@
     border-bottom: 3px solid transparent;
     text-align: center;
     min-width: 20px;
-    padding-bottom: 0.2rem;
+    padding-bottom: 1rem;
     &.active {
+      font-weight: 500;
       color: @gray-darkest;
       border-bottom: 3px solid @brand-primary;
     }
